objects/Event__c.object
<CustomObject>
    <fields>
        <fullName>Error_If_Any__c</fullName>
        <label>Error_If_Any</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsProccessed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsProccessed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JSON__c</fullName>
        <label>JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Event</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>